# merra2-tools

./: .gitignore  MERRA2_processing.py  MERRA2_processing_fluxnet.py  MERRA2_query.py  README.md  pixi.toml  pyproject.toml
src/merra2_tools/: __init__.py  config.py  query.py  virtualizarr.py
tests/: test_open_vzarr.py  test_query.py  test_vzarr.py  test_vzarr_statD.py
