[project]
authors = [{name = "Hannah Zafar", email = "hannah.zafar@nasa.gov"}]
description = "Tools for MERRA-2 data processing"
name = "merra2-tools"
requires-python = ">= 3.11"
dependencies = [ # Should I lock versioning for these, at least virtualizarr? #TODO: 
  "numpy",
  "pandas",
  "h5py", 
  "obstore",
  "virtualizarr[kerchunk]", # Optional dependencies in [kerchunk] don't bring in kerchunk?
  "kerchunk"
]
license = { text = "Apache-2.0" }
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
merra2_tools = { path = ".", editable = true }

[tool.pixi.dependencies]
python = "3.13.*"
numpy = ">=2.3.3,<3"
pandas = ">=2.3.3,<3"
xarray = ">=2025.10.1,<2026"
h5netcdf = ">=1.6.4,<2"
virtualizarr = ">=2.1.2,<3"
kerchunk = ">=0.2.9,<0.3"
fastparquet = ">=2024.11.0,<2025"
netcdf4 = ">=1.7.3,<2"
matplotlib = ">=3.10.7,<4"
pipdeptree = ">=2.29.0,<3"

[tool.pixi.tasks]
